# shapely

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitignore_pygeos  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CHANGES.txt  CITATION.cff  CITATION.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.txt  Dockerfile.arm64.wheels  Dockerfile.wheels  FAQ.rst  GEOS-C-API.txt  HISTORY.txt  ISSUE_TEMPLATE.md  LICENSE  LICENSE.txt  MANIFEST.in  MANIFEST_pygeos.in  README.md  README.rst  README.txt  README_original.rst  README_pygeos.rst  appveyor.yml  asv.conf.json  build-linux-arm64-wheels.sh  build-linux-wheels.sh  build-wheels.sh  comparison_results.csv  conftest.py  environment.yml  experiment_results.csv  (+18 more)
.circleci/: config.yml
DLLs_AMD64_VC9/: README.txt
DLLs_x86_VC7/: README.txt
algorithms-research/: draw.py  examples.py  headers_and_tests.py
benchmarks/: benchmarks.py
build-scripts/: macosx-10.6-intel.sh
ci/: Dockerfile  install_geos.cmd  install_geos.sh  install_geos_pygeos.cmd  install_geos_pygeos.sh
cxfreeze_example/: example.py  setup.py
debian/: changelog  control  copyright  docs  rules  watch
docker/: Dockerfile.arm64  Dockerfile.valgrind
docs/: Makefile  README.txt  affinity.rst  api.rst  changelog.rst  changelog2.rst  conf.py  constructive.rst  coordinates.rst  coverage.rst  creation.rst  design.rst  design.txt  environment.yml  geometry.rst  index.rst  index.txt  installation.rst  io.rst  linear.rst  manual.css  manual.html  manual.rst  manual.txt  measurement.rst  migration.rst  migration_pygeos.rst  plotting.rst  predicates.rst  project.rst  project.txt  properties.rst  release.rst  set_operations.rst  strtree.rst  testing.rst
docs_pygeos/: conf.py  constructive.rst  environment.yml  geometry.rst  index.rst  installation.rst  predicates.rst  set_operations.rst  strtree.rst
examples/: dissolve.py  geoms.py  intersect.py
manual/: manual.css  manual.html  manual.txt  style.css
shapely/: __init__.py  _buildcfg.py  _coverage.py  _enum.py  _flatcoords.py  _geoarrow.pyx  _geometry.py  _geometry.pyx  _geometry_helpers.pyx  _geos.pxd  _geos.pxi  _geos.pyx  _pygeos_api.pxd  _ragged_array.py  _typing.py  _version.py  affinity.py  base.py  constructive.py  coordinates.py  coords.py  creation.py  ctypes_declarations.py  decorators.py  enum.py  errors.py  factory.py  ftools.py  geoarrow.py  geometry.py  geopackagebinary.py  geos.py  homography.py  impl.py  io.py  iterops.py  json.py  libgeos.py  linear.py  linref.py  (+20 more)
shapely/algorithms/: __init__.py  _maximum_inscribed_rectangle.py  _oriented_envelope.py  cga.py  classes.py  experiments.py  longitude.py  meson.build  min_partition.py  min_partition_after.py  min_partition_before.py  min_partition_heuristic.py  oriented_envelope_custom.py  plot_poly.py  polylabel.py  rand_rect_poly.py  transform.py
shapely/examples/: dissolve.py  geoms.py  intersect.py  world.py
shapely/geometry/: __init__.py  base.py  classes.py  collection.py  conftest.py  coords.py  geo.py  linestring.py  meson.build  multilinestring.py  multipoint.py  multipolygon.py  point.py  polygon.py  polygonize.py  proxy.py
shapely/postgis/: split.py
shapely/speedups/: __init__.py  _speedups.c  _speedups.pyx
shapely/tests/: Array.txt  GeoInterface.txt  IterOps.txt  LineString.txt  MultiLineString.txt  MultiPoint.txt  MultiPolygon.txt  Operations.txt  Operators.txt  Persist.txt  Point.txt  Polygon.txt  __init__.py  attribute-chains.txt  cascaded_union.txt  common.py  invalid_intersection.txt  linear-referencing.txt  linemerge.txt  meson.build  polygonize.txt  render_coverage.txt  render_git_describe_coverage.txt  test_affinity.py  test_box.py  test_cga.py  test_collection.py  test_constructive.py  test_coordinates.py  test_coverage.py  test_creation.py  test_creation_indices.py  test_decorators.py  test_delegated.py  test_dlls.py  test_doctests.py  test_emptiness.py  test_equality.py  test_flatcoords.py  test_geoarrow.py  (+45 more)
shapely/tests/geometry/: meson.build  test_collection.py  test_coords.py  test_decimal.py  test_emptiness.py  test_equality.py  test_feature.py  test_format.py  test_geometry_base.py  test_getitem.py  test_hash.py  test_linestring.py  test_multi.py  test_multilinestring.py  test_multipoint.py  test_multipolygon.py  test_point.py  test_polygon.py  test_xy.py
shapely/tests/legacy/: __init__.py  conftest.py  meson.build  rungrind.dist  test_affinity.py  test_buffer.py  test_cga.py  test_clip_by_rect.py  test_create_inconsistent_dimensionality.py  test_equality.py  test_geointerface.py  test_get_segments.py  test_invalid_geometries.py  test_linear_referencing.py  test_linemerge.py  test_locale.py  test_make_valid.py  test_mapping.py  test_minimum_clearance.py  test_operations.py  test_orient.py  test_parallel_offset.py  test_persist.py  test_pickle.py  test_polygonize.py  test_polylabel.py  test_predicates.py  test_prepared.py  test_shape.py  test_snap.py  test_split.py  test_substring.py  test_svg.py  test_transform.py  test_union.py  test_vectorized.py  test_voronoi_diagram.py  test_wkb.py  test_wkt.py  valgrind-python.supp
shapely/tests/legacy/data/: emptypolygon_1.8.5.post1.pickle  geometrycollection_1.8.5.post1.pickle  linearring_1.8.5.post1.pickle  multipoint_1.8.5.post1.pickle  point3d_1.8.5.post1.pickle  polygon_1.8.5.post1.pickle
shapely/vectorized/: __init__.py  _geos.pxi  _vectorized.pyx  meson.build
src/: c_api.c  c_api.h  coords.c  coords.h  fast_loop_macros.h  geoarrow.c  geoarrow.h  geoarrow_geos.c  geoarrow_geos.h  geom_arr.c  geom_arr.h  geometry.c  geos.c  geos.h  geos_funcs_O_b.c  geos_funcs_O_b.h  geos_funcs_YYO_b.c  geos_funcs_YYO_b.h  geos_funcs_YY_O.c  geos_funcs_YY_O.h  geos_funcs_YY_Y.c  geos_funcs_YY_Y.h  geos_funcs_YY_b.c  geos_funcs_YY_b.h  geos_funcs_YY_d.c  geos_funcs_YY_d.h  geos_funcs_YYd_Y.c  geos_funcs_YYd_Y.h  geos_funcs_YYd_b.c  geos_funcs_YYd_b.h  geos_funcs_YYd_d.c  geos_funcs_YYd_d.h  geos_funcs_Y_O.c  geos_funcs_Y_O.h  geos_funcs_Y_Y.c  geos_funcs_Y_Y.h  geos_funcs_Y_b.c  geos_funcs_Y_b.h  geos_funcs_Y_d.c  geos_funcs_Y_d.h  (+30 more)
(+253 files in other folders)
