[build-system]
requires = [
    "Cython",
    # Starting with NumPy 1.25, NumPy is (by default) as far back compatible
    # as oldest-support-numpy was (customizable with a NPY_TARGET_VERSION
    # define).
    "numpy>=1.25,<3",
    "setuptools>=77.0.3",
]
build-backend = "setuptools.build_meta"

[project]
name = "shapely"
dynamic = ["version"]
authors = [
    {name = "Sean Gillies"},
]
maintainers = [
    {name = "Shapely contributors"},
]
description = "Manipulation and analysis of geometric objects"
readme = "README.rst"
keywords = ["geometry", "topology", "gis"]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "scipy-doctest",
]
docs = [
    "numpydoc==1.1.*",
    "matplotlib",
    "sphinx",
    "sphinx-book-theme",
    "sphinx-remove-toctrees",
]

[project.urls]
Documentation = "https://shapely.readthedocs.io/"
Repository = "https://github.com/shapely/shapely"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["shapely", "shapely.*"]

[tool.setuptools.package-data]
"shapely" = ["*.pxd"]

[tool.cibuildwheel]
skip = ["pp*", "*_i686", "*_ppc64le", "*_s390x"]
build-verbosity = 1
test-requires = "pytest"
test-command = "pytest --pyargs shapely.tests"
enable = ["cpython-freethreading"]

[tool.coverage.run]
source = ["shapely"]
omit = ["shapely/tests/*"]

[tool.doc8]
include = ["docs"]
ignore = ["D000", "D004"]
allow-long-titles = true
max-line-length = 79

[tool.ruff]
line-length = 88
extend-exclude = ["docs/*", "benchmarks/*", "shapely/_version.py", "versioneer.py"]

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-debugger
    "T10",
    # flake8-simplify
    # "SIM",
    # pylint
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    # misc lints
    "PIE",
    # implicit string concatenation
    "ISC",
    # type-checking imports
    "TC",
    # comprehensions
    "C4",
    # Ruff-specific rules
    "RUF",
    # isort
    "I",
    # pydocstyle
    "D",
]

ignore = [
    ### Intentionally disabled
    # module level import not at top of file
    "E402",
    # do not assign a lambda expression, use a def
    "E731",
    # mutable-argument-default
    "B006",
    # unused-loop-control-variable
    "B007",
    # get-attr-with-constant
    "B009",
    # dict literals
    "C408",
    # `import` should be at the top-level of a file
    "PLC0415",
    # Too many arguments to function call
    "PLR0913",
    # Too many returns
    "PLR0911",
    # Too many branches
    "PLR0912",
    # Magic number
    "PLR2004",

    ### Additional checks that don't pass yet
    # Useless statement
    "B018",
    # Within an except clause, raise exceptions with ...
    "B904",
    # Consider `elif` instead of `else` then `if` to remove indentation level
    "PLR5501",
    # collection-literal-concatenation
    "RUF005",
    # Mutable class attributes should be annotated with `typing.ClassVar`,
    "RUF012"
]

[tool.ruff.lint.per-file-ignores]
# ignore pydocstyle errors in tests
"**/tests/*" = ["D", "PLC2801", "PLR6301"]
# the order of imports in __init__ is a bit tricky, so keep manual
"shapely/__init__.py" = ["F401", "F403", "I"]
"shapely/ops.py" = ["PLR6301"]
"shapely/geometry/base.py" = ["PLR0904"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["packaging"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
allow-dunder-method-names = [
    "__array__",
    "__array_ufunc__",
    "__geo_interface__",
    "_repr_svg_",
]
max-positional-args = 8  # TODO: revise with deprecate_positional changes
