[metadata]
name = shapely
author = Sean Gillies
maintainer = Shapely contributors
description = Manipulation and analysis of geometric objects
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = geometry, topology, gis
license = BSD 3-Clause
url = https://github.com/shapely/shapely
project_urls =
    documentation = https://shapely.readthedocs.io/
    repository = https://github.com/shapely/shapely
    changelog = https://github.com/shapely/shapely/blob/main/CHANGELOG.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: GIS

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.13

[options.extras_require]
test = pytest
docs = sphinx; numpydoc

[options.packages.find]
include =
    shapely
    shapely.*

[versioneer]
VCS = git
style = pep440
versionfile_source = shapely/_version.py
versionfile_build = shapely/_version.py
tag_prefix =

[flake8]
max-line-length = 88
ignore =
    # space before : (needed for how black formats slicing)
    E203,
    # too many leading '#' for block comment
    E266,
    # TODO line length too long
    E501,
    # line break before binary operator
    W503,

[tool:isort]
profile = black
force_alphabetical_sort_within_sections = true

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
addopts = --ignore _vendor --ignore shapely/examples
