py.extension_module(
  'lib', # i.e. shapely.lib
  'c_api.c',
  'coords.c',
  'geom_arr.c',
  'geos.c',
  'geos_funcs_O_b.c',
  'geos_funcs_Y_b.c',
  'geos_funcs_Y_d.c',
  'geos_funcs_Y_i.c',
  'geos_funcs_Y_Y.c',
  'geos_funcs_Yi_Y.c',
  'geos_funcs_YY_b.c',
  'lib.c',
  'pygeom.c',
  'pygeos.c',
  'signal_checks.c',
  'strtree.c',
  'ufuncs.c',
  'vector.c',
  install: true,
  subdir: 'shapely',
  dependencies: [numpy_dep, geos_dep],
)
