py.install_sources([
    '__init__.py',
    'common.py',
    'test_constructive.py',
    'test_coordinates.py',
    'test_coverage.py',
    'test_creation.py',
    'test_creation_indices.py',
    'test_decorators.py',
    'test_geometry.py',
    'test_io.py',
    'test_linear.py',
    'test_measurement.py',
    'test_misc.py',
    'test_plotting.py',
    'test_predicates.py',
    'test_ragged_array.py',
    'test_set_operations.py',
    'test_strtree.py',
    'test_testing.py',
  ],
  subdir: 'shapely/tests',
  install_tag: 'tests'
)

subdir('geometry')
subdir('legacy')
