py.install_sources([
    '__init__.py',
    'conftest.py',
    'test_affinity.py',
    'test_box.py',
    'test_buffer.py',
    'test_cga.py',
    'test_clip_by_rect.py',
    'test_create_inconsistent_dimensionality.py',
    'test_delaunay.py',
    'test_empty_polygons.py',
    'test_equality.py',
    'test_geointerface.py',
    'test_invalid_geometries.py',
    'test_linear_referencing.py',
    'test_linemerge.py',
    'test_locale.py',
    'test_make_valid.py',
    'test_mapping.py',
    'test_minimum_clearance.py',
    'test_ndarrays.py',
    'test_nearest.py',
    'test_operations.py',
    'test_operators.py',
    'test_orient.py',
    'test_parallel_offset.py',
    'test_persist.py',
    'test_pickle.py',
    'test_polygonize.py',
    'test_polylabel.py',
    'test_predicates.py',
    'test_prepared.py',
    'test_products_z.py',
    'test_shape.py',
    'test_shared_paths.py',
    'test_singularity.py',
    'test_snap.py',
    'test_split.py',
    'test_substring.py',
    'test_svg.py',
    'test_transform.py',
    'test_union.py',
    'test_validation.py',
    'test_vectorized.py',
    'test_voronoi_diagram.py',
    'test_wkb.py',
    'test_wkt.py',
    'threading_test.py',
  ],
  subdir: 'shapely/tests/legacy',
  install_tag: 'tests'
)
